# swarog

./: .gitattributes  .gitignore  .go-arch-lint.yml  .golangci.yml  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  go.mod  go.sum  install.ps1  install.sh  run-dev.ps1  run.ps1  run.sh  rust-toolchain.toml  split-proof.ps1  split-proof.sh  verify.ps1  verify.sh
cmd/accounts-svc/: Cargo.toml
cmd/accounts-svc/src/: lib.rs  main.rs
cmd/admin-svc/: Cargo.toml
cmd/admin-svc/src/: lib.rs  main.rs
cmd/apikeys-svc/: Cargo.toml
cmd/apikeys-svc/src/: lib.rs  main.rs
cmd/audit-svc/: Cargo.toml
cmd/audit-svc/src/: lib.rs  main.rs
cmd/characters-svc/: Cargo.toml  main.go
cmd/characters-svc/src/: lib.rs  main.rs
cmd/config-svc/: Cargo.toml
cmd/config-svc/src/: lib.rs  main.rs
cmd/gateway-svc/: Cargo.toml  main.go
cmd/gateway-svc/src/: addrs.rs  addrs_tests.rs  admission_budget_tests.rs  lib.rs  main.rs  tlsenv.rs  tlsenv_tests.rs
cmd/gateway-svc/tests/: stub_swap.rs
cmd/inventory-svc/: Cargo.toml  main.go
cmd/inventory-svc/src/: lib.rs  main.rs
cmd/leaderboard-svc/: Cargo.toml
cmd/leaderboard-svc/src/: lib.rs  main.rs
cmd/match-svc/: Cargo.toml
cmd/match-svc/src/: lib.rs  main.rs
cmd/rating-svc/: Cargo.toml
cmd/rating-svc/src/: lib.rs  main.rs
cmd/scheduler-svc/: Cargo.toml  main.go
cmd/scheduler-svc/src/: lib.rs  main.rs
cmd/server/: Cargo.toml  main.go  main_test.go
cmd/server/src/: admission_budget_tests.rs  lib.rs  main.rs  tests.rs
core/app/: Cargo.toml
core/app/src/: lib.rs  tests.rs
core/asyncevents/: Cargo.toml  README.md
core/asyncevents/src/: catalog.rs  lib.rs  plane_metrics.rs  producer.rs  retention.rs  retention_tests.rs  store.rs  store_tests.rs  tests.rs  transport.rs  wakeup.rs  worker.rs  worker_tests.rs
core/bus/: Cargo.toml
core/bus/src/: lib.rs  tests.rs
core/conformance/: Cargo.toml
core/conformance/src/: lib.rs  tests.rs
core/edge/: Cargo.toml
core/edge/fuzz/: Cargo.toml
core/edge/fuzz/fuzz_targets/: frame_decode.rs  wire_decode.rs
core/edge/src/: client.rs  client_tests.rs  codec.rs  codec_tests.rs  frame.rs  frame_tests.rs  lib.rs  player.rs  player_tests.rs  reg.rs  reg_tests.rs  server.rs  server_tests.rs  shutdown_tests.rs  tls.rs  tls_tests.rs  wire.rs  wire_tests.rs
core/httpmw/: Cargo.toml
core/httpmw/src/: client_ip.rs  client_ip_prop_tests.rs  client_ip_tests.rs  layer.rs  layer_tests.rs  lib.rs  limiter.rs  limiter_tests.rs  middleware.rs  middleware_tests.rs  readiness.rs  readiness_tests.rs  route_pattern.rs  skip_infra_tests.rs
core/invalidation/: Cargo.toml
core/invalidation/src/: gauges.rs  lib.rs  tests.rs
core/lifecycle/: Cargo.toml
core/lifecycle/src/: app.rs  context.rs  lib.rs  module.rs  tests.rs  wiring.rs
core/metrics/: Cargo.toml
core/metrics/src/: lib.rs  tests.rs
core/opsapi/: Cargo.toml
core/opsapi/src/: lib.rs  tests.rs
core/remote/: Cargo.toml
core/remote/src/: lib.rs  redial_tests.rs  resolve.rs  resolve_tests.rs  tests.rs
core/remote/tests/: abrupt_kill_redial.rs
experiments/rust-sketch/: Cargo.toml  run.ps1  run.sh  split-proof.ps1  split-proof.sh  verify.ps1  verify.sh
experiments/rust-sketch/api/characters/charactersapi/: Cargo.toml
experiments/rust-sketch/api/characters/events/: Cargo.toml
experiments/rust-sketch/cmd/inventory-svc/: Cargo.toml
experiments/rust-sketch/cmd/server/: Cargo.toml
experiments/rust-sketch/core/app/: Cargo.toml
experiments/rust-sketch/core/bus/: Cargo.toml
experiments/rust-sketch/core/edge/: Cargo.toml
experiments/rust-sketch/crates/adminapi/: Cargo.toml
experiments/rust-sketch/crates/bus/: Cargo.toml
experiments/rust-sketch/crates/characters/: Cargo.toml
experiments/rust-sketch/crates/config/: Cargo.toml
experiments/rust-sketch/crates/contrib/: Cargo.toml
experiments/rust-sketch/crates/edgeca/: Cargo.toml
experiments/rust-sketch/crates/inventoryapi/: Cargo.toml
experiments/rust-sketch/crates/lifecycle/: Cargo.toml
experiments/rust-sketch/crates/opsapi/: Cargo.toml
experiments/rust-sketch/crates/outbox/: Cargo.toml
experiments/rust-sketch/crates/registry/: Cargo.toml
experiments/rust-sketch/crates/rpc-macro/: Cargo.toml
experiments/rust-sketch/modules/inventory/: Cargo.toml
experiments/rust-sketch/modules/messaging/: Cargo.toml
experiments/rust-sketch/modules/remote/: Cargo.toml
experiments/rust-sketch/tools/rpc-macro-tests/: Cargo.toml
modules/accounts/: Cargo.toml  accounts.go  accounts_test.go  admin.go  epic.go  epic_oauth.go  ops.go  parity_test.go  password.go  store.go  wire_contract_test.go
modules/accounts/accountsadminrpc/: accountsadminrpc_gen.go
modules/accounts/accountsapi/: accountsapi.go
modules/accounts/accountsauthrpc/: accountsauthrpc_gen.go
modules/accounts/accountsevents/: accountsevents.go
modules/accounts/accountsrpc/: accountsrpc_gen.go
modules/accounts/src/: admin.rs  conformance.rs  epic.rs  epic_oauth.rs  epic_tests.rs  lib.rs  ops.rs  password.rs  store.rs  tests.rs
modules/accounts/src/tests/: dev_auth_gate.rs  prune.rs
modules/admin/: Cargo.toml  admin.go  admin.html.tmpl  admin_fanout_test.go  admin_test.go  theme.css
modules/admin/adminapi/: adminapi.go
modules/admin/src/: admin.html.tmpl  admin.js  conformance.rs  lib.rs  login.html.tmpl  modal.html.tmpl  password.rs  tests.rs  theme.css
opscatalog/: Cargo.toml
opscatalog/src/: generated.rs  lib.rs
weles/: Cargo.toml  README.md  fleet.monolith.toml  fleet.split.toml
weles/master/: Cargo.toml
weles/master/src/: fleet_toml.rs  fleet_toml_tests.rs  lib.rs  manifest.rs  manifest_tests.rs  state.rs  store.rs  store_tests.rs
weles/src/: agentapi.rs  agentapi_tests.rs  cli.rs  cli_tests.rs  control.rs  control_tests.rs  fixture.rs  fleet_toml.rs  fleet_toml_tests.rs  health.rs  health_tests.rs  lib.rs  lock.rs  lock_tests.rs  main.rs  main_tests.rs  manifest.rs  manifest_tests.rs  prep.rs  prep_tests.rs  state.rs  state_tests.rs  supervisor.rs  supervisor_tests.rs
weles/src/platform/: mod.rs  unix.rs  windows.rs
weles/tests/: platform.rs  prep.rs
(+870 files in other folders)
