[workspace]
resolver = "2"
members = [
    # Foundations — imported by everyone, import no module (Go's root leaves + opsapi/edge/outbox + internal/app).
    "core/registry",
    "core/contrib",
    "core/bus",
    "core/lifecycle",
    "core/opsapi",
    "core/edge",
    "core/outbox",
    "core/app",
    # Process infrastructure (Go's modules/messaging + modules/remote): the durable
    # transport plane and the topology-blind registry SWAP — not domains, so they live
    # in core/ and the fortress rule applies to a clean modules/ (Step 4).
    "core/messaging",
    "core/remote",
    # Tooling — codegen + the dev-CA minter (Go's tools/).
    "tools/rpc-macro",
    "tools/rpc-macro-tests",
    "tools/edgeca",
    "tools/playercli",
    # Fortress enforcement (Step 5): a small binary that reads `cargo metadata` and
    # fails on any module→module or module→foreign-<name>rpc dependency edge.
    "tools/archcheck",
    # Contract surfaces, grouped by domain (Go's api/<name>/ tree); import no module.
    # `<name>api` = pure trait + wire surface (transport-free); `<name>rpc` = the
    # generated edge glue (impl-tier, may import edge).
    "api/accounts/api",
    "api/accounts/rpc",
    "api/accounts/events",
    "api/characters/api",
    "api/characters/rpc",
    "api/characters/events",
    "api/inventory/api",
    "api/inventory/rpc",
    "api/config/api",
    "api/config/rpc",
    "api/config/events",
    "api/admin/api",
    # Module implementations — private, reachable only from a cmd/ binary.
    "modules/config",
    "modules/characters",
    "modules/inventory",
    "modules/gateway",
    "modules/accounts",
    # Process entrypoints (Go's cmd/).
    "cmd/server",
    "cmd/characters-svc",
    "cmd/inventory-svc",
    "cmd/gateway-svc",
    "cmd/config-svc",
    "cmd/accounts-svc",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

# Pinned once here, referenced by `.workspace = true` in each crate. Keeps the
# leaf foundations on one coherent set of async/DB/serde versions.
[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
async-trait = "0.1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
axum = "0.7"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
futures = "0.3"
proptest = "1"
# HTTP client for the outbox relay's remote delivery (POST /events). rustls to align
# with the edge stack's TLS; default (native-tls) features off. Also the accounts
# module's client for the Epic JWKS fetch + OAuth code exchange.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Identity stack for the accounts module (Step 6): argon2id password hashing (PHC
# string format — byte-compatible with Go's $argon2id$v=19$m=…,t=…,p=…$salt$hash),
# OIDC id_token verification against a JWKS, random session tokens, base64url token
# rendering, and authorize-URL building for the Epic web OAuth flow.
argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"
base64 = "0.22"
url = "2"

# QUIC + mutual TLS stack for the edge transport. Pinned once here.
quinn = "0.11"
# TLS 1.3 only: the `tls12` feature is deliberately NOT enabled (mTLS point 5).
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
rcgen = "0.13"

# proc-macro toolchain for the `#[rpc]` codegen crate.
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

# Structured-logging subscriber for the process entrypoints (server + the two *-svc).
tracing-subscriber = "0.3"

# ---- Foundations (core/): leaves import only each other, never a module. ----
registry = { path = "core/registry" }
contrib = { path = "core/contrib" }
bus = { path = "core/bus" }
lifecycle = { path = "core/lifecycle" }
opsapi = { path = "core/opsapi" }
edge = { path = "core/edge" }
outbox = { path = "core/outbox" }
app = { path = "core/app" }
# Process infrastructure moved into core/ (Step 4): messaging (durable transport plane)
# and remote (the topology-blind registry SWAP; generic — imports no api/ crate).
messaging = { path = "core/messaging" }
remote = { path = "core/remote" }

# ---- Tooling (tools/): the #[rpc] codegen. ----
rpc-macro = { path = "tools/rpc-macro" }

# ---- Contract surfaces (api/<name>/): shared by modules, import no module.
# `<name>api` is the PURE contract a domain consumer may import (rule 4);
# `<name>rpc` is the generated transport glue (own module + remote + cmd only). ----
adminapi = { path = "api/admin/api" }
accountsapi = { path = "api/accounts/api" }
accountsrpc = { path = "api/accounts/rpc" }
accountsevents = { path = "api/accounts/events" }
configapi = { path = "api/config/api" }
configrpc = { path = "api/config/rpc" }
configevents = { path = "api/config/events" }
charactersevents = { path = "api/characters/events" }
charactersapi = { path = "api/characters/api" }
charactersrpc = { path = "api/characters/rpc" }
inventoryapi = { path = "api/inventory/api" }
inventoryrpc = { path = "api/inventory/rpc" }

# ---- Module implementations (modules/): private impl, reachable only from cmd/. ----
config = { path = "modules/config" }
characters = { path = "modules/characters" }
inventory = { path = "modules/inventory" }
gateway = { path = "modules/gateway" }
accounts = { path = "modules/accounts" }
