[workspace]
resolver = "2"
members = [
    # Foundations — imported by everyone, import no module (Go's root leaves + opsapi/edge + internal/app).
    "core/registry",
    "core/contrib",
    "core/bus",
    "core/lifecycle",
    "core/opsapi",
    "core/edge",
    "core/app",
    # Process infrastructure: the durable async-events plane (owned by core/app —
    # DB ⇒ plane, not a module) and the topology-blind registry SWAP — not domains,
    # so they live in core/ and the fortress rule applies to a clean modules/.
    "core/asyncevents",
    # The broadcast cache-invalidation plane (also app-owned — DB ⇒ plane): Postgres
    # LISTEN/NOTIFY re-runs replica-local cache refresh callbacks. Freshness, not delivery.
    "core/invalidation",
    "core/remote",
    # Convention-conformance contract types (std-only): Convention/Entry/Stance/
    # Fixture declared by every module's `conformance::entry()` and executed by
    # the `conformancecheck` harness (tools/conformance). Silence = fail.
    "core/conformance",
    # Cross-cutting HTTP infra (Go's metrics/): a PRIVATE Prometheus registry + the
    # /metrics scrape, mounted by core/app in every module-hosting process (Step 12).
    "core/metrics",
    # Cross-cutting HTTP middleware (Go's httpmw/): per-IP token-bucket rate limiting,
    # trusted-proxy-aware client-IP resolution, and the readiness contribution slot,
    # wired by core/app + the gateway front door (Step 13).
    "core/httpmw",
    # Tooling — codegen + the dev-CA minter (Go's tools/).
    "tools/rpc-macro",
    "tools/rpc-macro-tests",
    "tools/edgeca",
    "tools/playercli",
    # Cross-platform split-proof harness (replaces split-proof.sh/.ps1 + tools/winctrl):
    # spawns the
    # 12-svc fleet via std::process (typed env/args, kill-on-drop — no shell quoting,
    # no winctrl, no MSYS job-control), health-checks over reqwest, and drives QUIC via
    # the `edge` lib. `cargo run -p splitproof`.
    "tools/splitproof",
    # Fortress enforcement (Step 5): a small binary that reads `cargo metadata` and
    # fails on any module→module or module→foreign-<name>rpc dependency edge.
    "tools/archcheck",
    # Topic drift check (Step 14b): builds the monolith module set with a recording bus
    # transport and flags any `bus::define`d topic that no module subscribes to.
    "tools/topiccheck",
    # Registry require-vs-declare drift check: builds the monolith module set with a
    # require-observer installed and flags any mandatory `require()` whose provider is
    # not declared in the caller's `requires()` (under-declaration).
    "tools/requirecheck",
    # Static monolith/split front-door route-parity check (remediation round 3, Step
    # 7a): builds every process of both profiles (register->init, lazy pool, no-op
    # transport) under both env-gate configs and asserts the operation/binding/local/
    # edge contribution sets are structurally consistent -- the general net for the
    # inventory-dev-grant bug class (a route present in one topology but not the other).
    "tools/routecheck",
    # Single-sourced per-process module lists (Step 3, abstraction-leak closures;
    # per-process cmd/* libs, Step 10): both topiccheck and requirecheck build their
    # module set through this crate's `DeploymentProfile`, which imports the cmd/*
    # composition-root libs directly — a module added to any cmd/* lib can't silently
    # miss one harness's copy but not the other's.
    "tools/checkmodules",
    # Durable-event-log operator CLI (Step 5): inspects subscriptions/lag and drives the
    # recovery verbs (retry/pause/resume/skip/retire/bump-generation) over the shared
    # asyncevents schema; retention GC lives in core/asyncevents.
    "tools/eventctl",
    # Admin-user operator CLI (Step 3): mint/list/delete GameOps admin logins in the
    # shared `admin` schema over DATABASE_URL; wrapped by the root install.sh/.ps1.
    # Reuses the `admin` module crate's USERS_DDL + argon2 hash fns (one source of truth).
    "tools/adminctl",
    # External C# client generator (Step 2): scrapes the player-reachable API (runtime
    # route_bindings() ∪ syn source parse) into a typed manifest; the C# emitter is Step 3.
    "tools/csharp-client-gen",
    # Contract surfaces, grouped by domain (Go's api/<name>/ tree); import no module.
    # `<name>api` = pure trait + wire surface (transport-free); `<name>rpc` = the
    # generated edge glue (impl-tier, may import edge).
    "api/accounts/api",
    "api/accounts/rpc",
    "api/accounts/events",
    "api/apikeys/api",
    "api/apikeys/rpc",
    "api/characters/api",
    "api/characters/rpc",
    "api/characters/events",
    "api/inventory/api",
    "api/inventory/rpc",
    "api/match/api",
    "api/match/rpc",
    "api/match/events",
    "api/rating/api",
    "api/rating/rpc",
    "api/leaderboard/api",
    "api/leaderboard/rpc",
    "api/config/api",
    "api/config/rpc",
    "api/config/events",
    "api/admin/api",
    "api/admin/rpc",
    "api/admin/events",
    "api/audit/rpc",
    "api/scheduler/events",
    "api/scheduler/rpc",
    # Module implementations — private, reachable only from a cmd/ binary.
    "modules/config",
    "modules/apikeys",
    "modules/characters",
    "modules/inventory",
    "modules/gateway",
    "modules/accounts",
    "modules/admin",
    "modules/audit",
    "modules/scheduler",
    "modules/match",
    "modules/rating",
    "modules/leaderboard",
    # Non-shipping demo crates — compiled + runnable, monolith-only by design.
    "demos/webui",
    # Process entrypoints (Go's cmd/).
    "cmd/server",
    "cmd/characters-svc",
    "cmd/inventory-svc",
    "cmd/gateway-svc",
    "cmd/config-svc",
    "cmd/apikeys-svc",
    "cmd/accounts-svc",
    "cmd/admin-svc",
    "cmd/audit-svc",
    "cmd/scheduler-svc",
    "cmd/match-svc",
    "cmd/rating-svc",
    "cmd/leaderboard-svc",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

# Pinned once here, referenced by `.workspace = true` in each crate. Keeps the
# leaf foundations on one coherent set of async/DB/serde versions.
[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
async-trait = "0.1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
axum = "0.7"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
futures = "0.3"
proptest = "1"
# HTTP client for the accounts module (Epic JWKS fetch + OAuth code exchange).
# rustls to align with the edge stack's TLS; default (native-tls) features off.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
windows-sys = "0.59"

# Identity stack for the accounts module (Step 6): argon2id password hashing (PHC
# string format — byte-compatible with Go's $argon2id$v=19$m=…,t=…,p=…$salt$hash),
# OIDC id_token verification against a JWKS, random session tokens, base64url token
# rendering, and authorize-URL building for the Epic web OAuth flow.
argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"
base64 = "0.22"
url = "2"

# Cookie parsing for the admin portal's session auth (axum 0.7 line). Only the
# `cookie` feature — the admin module reads `admin_session` via `CookieJar` and
# writes Set-Cookie headers itself (exact flag control, no extra `time` dep).
axum-extra = { version = "0.9", features = ["cookie"] }

# CIDR containment for the httpmw trusted-proxy client-IP walk (Step 13). A tiny,
# ubiquitous crate; the security-critical XFF walk is ours, only bit-masking is ipnet's.
ipnet = "2"

# Native TLS termination for the HTTP front (admin hardening Step 4). BOTH pinned to
# the ring provider — the crypto-provider trap: axum-server's `tls-rustls` feature and
# rustls-acme's default features drag `aws-lc-rs` (NASM/CMake native build, and a second
# provider that breaks rustls's single-provider auto-detection). So: axum-server with
# ONLY `tls-rustls-no-provider`, rustls-acme with default features OFF plus `ring`
# (provider), `axum` (AxumAcceptor glue over axum-server 0.8 — verified: rustls-acme
# 0.15's `axum` feature depends on `axum-server ^0.8`), and `webpki-roots` (trust roots
# for the ACME directory HTTPS client; without it `AcmeConfig::new` doesn't exist).
# `cargo tree -i aws-lc-rs` must stay EMPTY — checked by the Step 4 gate.
axum-server = { version = "0.8", default-features = false, features = ["tls-rustls-no-provider"] }
rustls-acme = { version = "0.15", default-features = false, features = ["ring", "axum", "webpki-roots"] }

# QUIC + mutual TLS stack for the edge transport. Pinned once here.
quinn = "0.11"
# TLS 1.3 only: the `tls12` feature is deliberately NOT enabled (mTLS point 5).
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pki-types = "1"
rcgen = "0.13"

# proc-macro toolchain for the `#[rpc]` codegen crate.
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

# Structured-logging subscriber for the process entrypoints (server + the two *-svc).
tracing-subscriber = "0.3"

# Templating for the admin portal (Go used html/template): the embedded admin page
# rendered over serde view models, auto-escaping on the `.html` template name.
minijinja = "2"

# HTTP metrics (Go used prometheus/client_golang): a PRIVATE registry + the two labeled
# collectors + text exposition. `default-features = false` drops the `process` collector
# (procfs/libc — unavailable/awkward on Windows); the registry, vecs and TextEncoder we
# use are always available. Default histogram buckets match Go's prometheus.DefBuckets.
prometheus = { version = "0.13", default-features = false }

# ---- Foundations (core/): leaves import only each other, never a module. ----
registry = { path = "core/registry" }
contrib = { path = "core/contrib" }
bus = { path = "core/bus" }
lifecycle = { path = "core/lifecycle" }
opsapi = { path = "core/opsapi" }
edge = { path = "core/edge" }
app = { path = "core/app" }
# Process infrastructure in core/: asyncevents (the durable-events plane, owned by
# app::run) and remote (the topology-blind registry SWAP; generic — imports no api/ crate).
asyncevents = { path = "core/asyncevents" }
invalidation = { path = "core/invalidation" }
remote = { path = "core/remote" }
conformance = { path = "core/conformance" }
metrics = { path = "core/metrics" }
httpmw = { path = "core/httpmw" }

# ---- Tooling (tools/): the #[rpc] codegen. ----
rpc-macro = { path = "tools/rpc-macro" }
checkmodules = { path = "tools/checkmodules" }

# ---- Contract surfaces (api/<name>/): shared by modules, import no module.
# `<name>api` is the PURE contract a domain consumer may import (rule 4);
# `<name>rpc` is the generated transport glue (own module + remote + cmd only). ----
adminapi = { path = "api/admin/api" }
adminrpc = { path = "api/admin/rpc" }
adminevents = { path = "api/admin/events" }
auditrpc = { path = "api/audit/rpc" }
schedulerevents = { path = "api/scheduler/events" }
schedulerrpc = { path = "api/scheduler/rpc" }
accountsapi = { path = "api/accounts/api" }
accountsrpc = { path = "api/accounts/rpc" }
accountsevents = { path = "api/accounts/events" }
apikeysapi = { path = "api/apikeys/api" }
apikeysrpc = { path = "api/apikeys/rpc" }
configapi = { path = "api/config/api" }
configrpc = { path = "api/config/rpc" }
configevents = { path = "api/config/events" }
charactersevents = { path = "api/characters/events" }
charactersapi = { path = "api/characters/api" }
charactersrpc = { path = "api/characters/rpc" }
inventoryapi = { path = "api/inventory/api" }
inventoryrpc = { path = "api/inventory/rpc" }
matchapi = { path = "api/match/api" }
matchrpc = { path = "api/match/rpc" }
matchevents = { path = "api/match/events" }
ratingapi = { path = "api/rating/api" }
ratingrpc = { path = "api/rating/rpc" }
leaderboardapi = { path = "api/leaderboard/api" }
leaderboardrpc = { path = "api/leaderboard/rpc" }

# ---- Module implementations (modules/): private impl, reachable only from cmd/. ----
config = { path = "modules/config" }
apikeys = { path = "modules/apikeys" }
characters = { path = "modules/characters" }
inventory = { path = "modules/inventory" }
gateway = { path = "modules/gateway" }
accounts = { path = "modules/accounts" }
admin = { path = "modules/admin" }
audit = { path = "modules/audit" }
scheduler = { path = "modules/scheduler" }
match_module = { path = "modules/match" }
rating = { path = "modules/rating" }
leaderboard = { path = "modules/leaderboard" }
# ---- Demo crates (demos/): non-shipping, importable ONLY by cmd/server (archcheck). ----
webui = { path = "demos/webui" }

# ---- Composition-root libs (cmd/): each cmd/<name> package now also exports a `lib.rs`
# (Step 10) carrying `pub fn modules(&ProcessWiring, …) -> Vec<Box<dyn Module>>` — the
# SAME module list its `main.rs` boots. `tools/checkmodules` is their one non-`cmd/*`
# consumer, so it can build both the Monolith and Split deployment profiles from the
# real composition, not a hand-mirrored copy. ----
server = { path = "cmd/server" }
gateway-svc = { path = "cmd/gateway-svc" }
characters-svc = { path = "cmd/characters-svc" }
inventory-svc = { path = "cmd/inventory-svc" }
config-svc = { path = "cmd/config-svc" }
apikeys-svc = { path = "cmd/apikeys-svc" }
accounts-svc = { path = "cmd/accounts-svc" }
admin-svc = { path = "cmd/admin-svc" }
audit-svc = { path = "cmd/audit-svc" }
scheduler-svc = { path = "cmd/scheduler-svc" }
match-svc = { path = "cmd/match-svc" }
rating-svc = { path = "cmd/rating-svc" }
leaderboard-svc = { path = "cmd/leaderboard-svc" }
