[package]
name = "weles"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

# Zero-sharing: weles is a standalone fleet-supervisor CLI. It must never depend on
# a workspace crate (core/*, api/*, modules/*, tools/*) — only external deps.
[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
] }

[[bin]]
name = "weles"
path = "src/main.rs"
