[package]
name = "accounts-svc"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

# The accounts fortress process (Step 6): hosts gateway + accounts + messaging and
# stands up one shared QUIC edge server. `accounts` contributes its wire-only
# `accounts.verifySession` face + the auth op faces to `edge::EDGE_SLOT`
# (topology-blind); `app::run` installs them here so every peer gateway's session
# verifier (an `accountsrpc` Stub client) resolves bearer tokens over the
# mutually-authenticated edge — the real-session replacement for DevSessionVerifier.
[[bin]]
name = "accounts-svc"
path = "src/main.rs"

[dependencies]
app = { workspace = true }
lifecycle = { workspace = true }
edge = { workspace = true }
gateway = { workspace = true }
accounts = { workspace = true }
messaging = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
