[package]
name = "accounts-svc"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

# The accounts fortress process (Step 6): hosts accounts and stands up one
# shared QUIC edge server. `accounts` contributes its wire-only `accounts.verifySession`
# face + the auth op faces to `edge::EDGE_SLOT` (topology-blind); `app::run` installs them
# here so every front gateway's session verifier (an `accountsrpc` Stub client) resolves
# bearer tokens over the mutually-authenticated edge. It hosts NO gateway (FrontDoor) — the
# single public front door lives only in gateway-svc + the monolith; the accounts module
# still mounts its Epic OAuth browser routes on this process's own HTTP port.
[[bin]]
name = "accounts-svc"
path = "src/main.rs"

[dependencies]
app = { workspace = true }
lifecycle = { workspace = true }
metrics = { workspace = true }
edge = { workspace = true }
accounts = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
