[package]
name = "audit-svc"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

# The audit fortress process (Step 8). Hosts audit + messaging and stands up one shared
# QUIC edge server so a remote admin process pulls audit's `admin.adminData` page over
# the mTLS edge. audit owns schema `audit` + an inbox, so unlike the pure aggregators
# (gateway-svc/admin-svc) it needs a DB pool AND the messaging durable plane (its
# `POST /events` inbound sink receives peers' events). No gateway module: audit fronts
# no typed ops and no player plane — it is a pure event sink.
[[bin]]
name = "audit-svc"
path = "src/main.rs"

[dependencies]
app = { workspace = true }
lifecycle = { workspace = true }
edge = { workspace = true }
audit = { workspace = true }
messaging = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
