[package]
name = "characters-svc"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

# Process A of the split: hosts ONLY gateway + characters + messaging, and stands up a
# single shared QUIC edge server so a peer's inventory can resolve `characters.ownerOf`
# over the mutually-authenticated edge. It imports neither inventory nor config — so
# the linker drops every package this binary never names.
[[bin]]
name = "characters-svc"
path = "src/main.rs"

[dependencies]
app = { workspace = true }
edge = { workspace = true }
lifecycle = { workspace = true }
gateway = { workspace = true }
characters = { workspace = true }
messaging = { workspace = true }
remote = { workspace = true }
accountsrpc = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
