[package]
name = "config-svc"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

# The config fortress process (Step 5): hosts config + messaging and stands up one shared
# QUIC edge server. `config` contributes its wire-only `ConfigSnapshot` face to
# `edge::EDGE_SLOT` (topology-blind); `app::run` installs it here so a peer's
# `CachedConfig` (inventory-svc) can pull the snapshot over the mutually-authenticated
# edge, and config's listener relays `config.changed` durably to that peer. It hosts NO
# gateway (FrontDoor) — the single public front door lives only in gateway-svc + the
# monolith, so no accounts stub is needed.
[[bin]]
name = "config-svc"
path = "src/main.rs"

[dependencies]
app = { workspace = true }
lifecycle = { workspace = true }
edge = { workspace = true }
config = { workspace = true }
messaging = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
