[package]
name = "gateway-svc"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

# The dedicated front-door process (port of Go's `cmd/gateway-svc`): a PURE transport
# process. It hosts no provider module and no DB — every op it fronts resolves Remote
# over a `remote::Stub`. It imports neither `characters` nor `inventory` IMPL crate,
# only their `<name>rpc` glue (to pass `remote_factories()` into the generic
# `remote::Stub`, Step 4 — sanctioned for cmd/*, rule 5), so the linker drops the impl
# packages this binary never names.
[[bin]]
name = "gateway-svc"
path = "src/main.rs"

[dependencies]
app = { workspace = true }
edge = { workspace = true }
lifecycle = { workspace = true }
metrics = { workspace = true }
gateway = { workspace = true }
remote = { workspace = true }
charactersrpc = { workspace = true }
inventoryrpc = { workspace = true }
accountsrpc = { workspace = true }
apikeysrpc = { workspace = true }
matchrpc = { workspace = true }
leaderboardrpc = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
# Pins the process-global crypto provider to ring at main start (admin hardening
# Step 4) — the default-provider builders inside axum-server/rustls-acme then resolve
# to ring, never aws-lc-rs.
rustls = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
# The generic `remote::Stub` swap integration test (`tests/stub_swap.rs`) names the
# PURE api traits + route bindings and the registry key helper; the glue crates it
# feeds are already normal deps above. These stay dev-only — the binary itself never
# needs the api crates.
charactersapi = { workspace = true }
inventoryapi = { workspace = true }
opsapi = { workspace = true }
registry = { workspace = true }
