[package]
name = "inventory-svc"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

# Process B of the split: hosts gateway + config + inventory + messaging and fills
# inventory's `characters` dependency with a `remote::Stub` that dials A over the QUIC
# edge. It imports the inventory + remote crates and the `charactersrpc` CONTRACT (to
# name `dyn Ownership`) — but NOT the characters IMPL. No edge server: B dials OUT to
# A; nothing calls B over the edge in the 2-process proof.
[[bin]]
name = "inventory-svc"
path = "src/main.rs"

[dependencies]
app = { workspace = true }
lifecycle = { workspace = true }
edge = { workspace = true }
gateway = { workspace = true }
config = { workspace = true }
inventory = { workspace = true }
messaging = { workspace = true }
remote = { workspace = true }
# The characters glue: this cmd/ root passes `charactersrpc::remote_factories()` into
# the generic `remote::Stub` (Step 4). rule 5 sanctions cmd/* importing the glue; it
# still never names the characters IMPL crate.
charactersrpc = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
